--- a/deno.jsonc
+++ b/deno.jsonc
@@ -21,12 +21,13 @@
     "@fathym/common": "https://deno.land/x/fathym_common@v0.0.185/mod.ts",
     "@fathym/eac": "https://deno.land/x/fathym_everything_as_code@v0.0.415/mod.ts",
     "@fathym/eac/api": "https://deno.land/x/fathym_everything_as_code_api@v0.0.44/mod.ts",
-    "@fathym/eac/runtime": "https://deno.land/x/fathym_eac_runtime@v0.0.291/mod.ts",
-    "@fathym/eac/runtime/": "https://deno.land/x/fathym_eac_runtime@v0.0.291/",
-    "@fathym/eac/runtime/browser": "https://deno.land/x/fathym_eac_runtime@v0.0.291/browser.ts",
+    "@fathym/eac/runtime": "https://deno.land/x/fathym_eac_runtime@v0.0.292/mod.ts",
+    "@fathym/eac/runtime/": "https://deno.land/x/fathym_eac_runtime@v0.0.292/",
+    "@fathym/eac/runtime/browser": "https://deno.land/x/fathym_eac_runtime@v0.0.292/browser.ts",
     "@fathym/ioc": "https://deno.land/x/fathym_ioc@v0.0.10/mod.ts",
-    "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.88/mod.ts",
-    "@fathym/synaptic/": "https://deno.land/x/fathym_synaptic@v0.0.88/",
+    "@fathym/synaptic": "../synaptic/mod.ts",
+    // "@fathym/synaptic": "https://deno.land/x/fathym_synaptic@v0.0.92/mod.ts",
+    "@fathym/synaptic/": "https://deno.land/x/fathym_synaptic@v0.0.92/",
     "preact": "https://esm.sh/preact@10.20.1",
     "preact/": "https://esm.sh/preact@10.20.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.4.0"
